@@ -1,5 +1,10 @@
 2006-12-13  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* config/tc-i386.c (match_template): Use a for loop to set
+	operand_types array.
+
+2006-12-13  H.J. Lu  <hongjiu.lu@intel.com>
+
 	PR gas/3712
 	* config/tc-i386.c (match_template): Use MAX_OPERANDS for the
 	number of operands. Issue an error if MAX_OPERANDS != 4. Add
